examples/test/testpolicy16262.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16262
  namespace: namespace34
spec:
  podSelector:
    matchLabels:
      key11: value47
      key34: value10
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key48: value17
      podSelector:
        matchLabels:
          key12: value24
          key22: value29
          key31: value11
